--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -75,6 +75,18 @@
         <item name="android:paddingRight">47dp</item>
     </style>
 
-    <dimen name="action_button_height">53dp</dimen>
-    <dimen name="action_button_text_size">18sp</dimen>
+    <style name="AuthInputFieldStyle" parent="Widget.AppCompat.EditText">
+        <item name="android:background">@drawable/auth_input_field_background</item>
+        <item name="android:layout_height">@dimen/input_field_height</item>
+        <item name="android:textColor">@color/colorTextBodyGrey</item>
+        <item name="android:textSize">@dimen/input_field_text_size</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textColorHint">@color/colorTextAccentLight</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:hint">@null</item>
+        <item name="android:fontFamily">@font/rubik_regular</item>
+    </style>
 </resources>
