--- a/app/src/doctors/res/layout/activity_sign_up.xml
+++ b/app/src/doctors/res/layout/activity_sign_up.xml
@@ -201,12 +201,11 @@
                 android:textSize="22sp"
                 app:fontFamily="@font/rubik_regular" />
 
-            <EditText
-                android:id="@+id/et_degree_photo"
-                style="@style/AuthInputFieldStyle"
+            <com.facomobile.views.CustomFilePicker
+                android:id="@+id/cfp_degree_photo"
                 android:layout_width="match_parent"
-                android:layout_marginBottom="16dp"
-                android:inputType="textCapWords" />
+                android:layout_height="@dimen/input_field_height"
+                android:layout_marginBottom="16dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -223,6 +222,7 @@
                 android:id="@+id/et_password"
                 style="@style/AuthInputFieldStyle"
                 android:layout_width="match_parent"
+                android:layout_marginBottom="16dp"
                 android:autofillHints="password"
                 android:inputType="textPassword" />
 
